--- a/lib/geb/samples/bootstrap_jquery/geb.config.yml
+++ b/lib/geb/samples/bootstrap_jquery/geb.config.yml
@@ -19,10 +19,5 @@ output_dir: "output"
 
 # if the site is a template site, specify which files and directories are part of the template
 # when you create a new site, these files and directories will be copied to the new site
-site_template:
-  - "assets"
-  - "shared"
-  - "blog/*.html"
-  - "*.html"
-  - "site.webmanifest"
-  
+template_name: 'bootstrap_jquery'
+template_paths: ["assets", "shared", "blog/*.html", "*.html", "site.webmanifest"]
