--- a/lib/geb/samples/geb.config.yml
+++ b/lib/geb/samples/geb.config.yml
@@ -19,8 +19,6 @@ output_dir: "output"
 
 # if the site is a template site, specify which files and directories are part of the template
 # when you create a new site, these files and directories will be copied to the new site
-site_template:
-  - "lib/geb/samples/sample_file_1.txt"
-  - "lib/geb/samples/sample_file_2.txt"
-  - "lib/geb/samples/sample_file_3.txt"
+# template_name: 
+# template_paths: []
   
