--- a/lib/geb/samples/basic/geb.config.yml
+++ b/lib/geb/samples/basic/geb.config.yml
@@ -22,5 +22,5 @@ assets_dir: "assets"
 
 # if the site is a template site, specify which files and directories are part of the template
 # when you create a new site, these files and directories will be copied to the new site
-template_name: 'bootstrap_jquery'
-template_paths: ["assets", "shared", "blog/*.html", "*.html", "site.webmanifest"]
+template_name: 'basic'
+template_paths: ["assets", "shared", "*.html", "site.webmanifest"]
