--- a/test/files/test-site/geb.config.yml
+++ b/test/files/test-site/geb.config.yml
@@ -67,4 +67,22 @@ remote_path: "/home/user/public_html"
 # the release directory.
 # e.g. template_paths: ["assets", "shared", "*.html", "site.webmanifest"]
 template_paths: ["assets", "shared", "*.html", "site.webmanifest"]
+
+# If you want to specify site variables, you can do so here.  These variables will be available
+# to the site as _{variable}_.  You can specify different variables for different environments.
+# Site variables are processed last, and can be used in pages, templates or partials.
+# To use a site variable, use the syntax _{variable_name}_.
+# In the example below, use _{title}_ and _{site_url}_ in your pages, templates or partials.
+# Geb will use local or release version depending if you are running the build or release command.
+# Geb also sets several built-in variables that you can use in your site.
+#  - _{site_name}_ - the name of the site
+#  - _{page_relative_path}_ - the relative path of the page from the site directory
+#  - _{page_title}_ - the title of the page, extracted from the page content <title> tag
+site_variables:
+  local:
+    title: "My Local Site"
+    site_url: "http://localhost:4000"
+  release:
+    title: "My Site"
+    site_url: "https://example.com"
   
